<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailsActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size"
        android:text="@string/choose_datetime" />

        <Button
            android:layout_below="@id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_date"
            android:padding="@dimen/pad"
            android:layout_marginTop="@dimen/marginl"
            android:text="@string/date_button"
            android:onClick="showDatePickerDialog"/>

    <Button
        android:id="@+id/button_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button_date"
        android:layout_marginTop="@dimen/marginl"
        android:layout_toEndOf="@+id/button_date"
        android:onClick="showTimePickerDialog"
        android:padding="@dimen/pad1"
        android:text="@string/time_button" />

    <TextView
            android:id="@+id/choice"
            android:textColor="@color/color_black"
            android:layout_marginTop="@dimen/mt"
            android:layout_width="wrap_content"
            android:layout_below="@+id/button_date"
            android:layout_height="wrap_content"
            android:text="@string/yourchoice"
            android:textSize="@dimen/text_size" />
    <TextView
        android:id="@+id/datechosen"
        android:textColor="@color/color_black"
        android:layout_marginTop="@dimen/marginl"
        android:layout_below="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size" />
    <TextView
        android:id="@+id/timechosen"
        android:textColor="@color/color_black"
        android:layout_marginTop="@dimen/marginl"
        android:layout_toEndOf="@id/datechosen"
        android:layout_marginStart="@dimen/mt"
        android:layout_below="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm"
        android:padding="@dimen/text_size"
        android:layout_marginTop="@dimen/marginl"
        android:layout_below="@+id/datechosen"
        android:text="@string/confirm" />
    <ImageView
        android:id="@+id/clockIcon"
        android:layout_marginTop="@dimen/marginl"
        android:layout_below="@+id/confirm"
        android:layout_width="@dimen/layout1"
        android:layout_height="@dimen/layout1"
        android:onClick="openInstagram"
        android:src="@drawable/clock1" />
    <TextView
        android:id="@+id/workinghours"
        android:textSize="@dimen/text_size"
        android:layout_marginTop="@dimen/marginl"
        android:textStyle="bold"
        android:textColor="@color/darkgrey"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="@dimen/card_margin"
        android:layout_below="@+id/confirm"
        android:layout_toEndOf="@+id/clockIcon"
        android:text="@string/workinghrs"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
    <ImageView
        android:id="@+id/locationIcon"
        android:layout_marginTop="@dimen/marginl"
        android:layout_below="@+id/clockIcon"
        android:layout_width="@dimen/layout2"
        android:layout_height="@dimen/layout2"
        android:onClick="openInstagram"
        android:src="@drawable/location1"
        tools:ignore="ContentDescription" />
    <TextView
            android:id="@+id/address"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="@dimen/marginl"
            android:textStyle="bold"
            android:textColor="@color/darkgrey"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/card_margin"
            android:layout_below="@+id/clockIcon"
            android:layout_toEndOf="@+id/locationIcon"
            android:text="@string/add"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
</RelativeLayout>